--- a/ts-react-master/lecture/index.html
+++ b/ts-react-master/lecture/index.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>반응속도체크</title>
+    <meta charset="UTF-8"/>
+    <title>틱택토</title>
     <style>
-        #screen {
-            width: 300px;
-            height: 200px;
+        table {
+            border-collapse: collapse;
+        }
+        td {
+            border: 1px solid black;
+            width: 40px;
+            height: 40px;
             text-align: center;
-            user-select: none;
-        }
-        #screen.waiting {
-            background-color: aqua;
-        }
-        #screen.ready {
-            background-color: red;
-            color: white;
-        }
-        #screen.now {
-            background-color: greenyellow;
         }
     </style>
 </head>
@@ -27,3 +19,4 @@
 <script src="./dist/app.js"></script>
 </body>
 </html>
+
